--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.8",
+    "daisyui": "^4.12.23",
     "graphql": "^16.10.0",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-slideshow-image": "^4.3.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
