--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
     "react-slideshow-image": "^4.3.2"
   },
   "devDependencies": {
