--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.8",
+    "@apollo/experimental-nextjs-app-support": "^0.11.10",
     "@netlify/plugin-nextjs": "^5.9.4",
     "daisyui": "^4.12.23",
     "graphql": "^16.10.0",
