--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.12.8",
     "@apollo/experimental-nextjs-app-support": "^0.11.10",
+    "@hcaptcha/react-hcaptcha": "^1.12.0",
     "@netlify/plugin-nextjs": "^5.9.4",
     "daisyui": "^4.12.23",
     "graphql": "^16.10.0",
@@ -20,7 +21,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.3",
-    "react-slideshow-image": "^4.3.2"
+    "react-slideshow-image": "^4.3.2",
+    "save": "^2.9.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,6 +31,7 @@
     "@graphql-codegen/typescript": "^4.1.3",
     "@graphql-codegen/typescript-operations": "^4.4.1",
     "@graphql-codegen/typescript-react-apollo": "^4.3.2",
+    "@hcaptcha/types": "^1.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
